--- a/model/pom.xml
+++ b/model/pom.xml
@@ -6,17 +6,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.cloudogu.blog</groupId>
-        <artifactId>tojson</artifactId>
-        <version>1.0.0</version>
+         <groupId>org.soujava.example</groupId>
+         <artifactId>parent</artifactId>
+         <version>1.0.0</version>
     </parent>
 
-    <artifactId>tojson-example</artifactId>
+    <artifactId>model</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>tojson-lib</artifactId>
+            <artifactId>processor</artifactId>
             <version>${project.version}</version>
             <optional>true</optional>
         </dependency>
