--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,25 @@
         <module>processor</module>
         <module>model</module>
     </modules>
+    <properties>
+        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
+        <junit.version>5.6.0</junit.version>
+    </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
 
