--- a/processor/pom.xml
+++ b/processor/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.soujava.example</groupId>
+        <groupId>org.soujava.metadata</groupId>
         <artifactId>parent</artifactId>
         <version>1.0.0</version>
     </parent>
