--- a/compile/src/main/resources/InstanceSupplier.template
+++ b/compile/src/main/resources/InstanceSupplier.template
@@ -1,6 +1,6 @@
 package {0};
 
-import jakarta.nosql.mapping.reflection.InstanceSupplier;
+import org.soujava.metadata.compiler.InstanceSupplier;
 
 public class {1} implements InstanceSupplier '{'
     @Override
