--- a/compile/src/main/resources/FieldWriter.template
+++ b/compile/src/main/resources/FieldWriter.template
@@ -1,7 +1,9 @@
 package {0};
 
 import org.soujava.metadata.compiler.FieldWriter;
+import javax.annotation.processing.Generated;
 
+@Generated("Soujava Writer Reader Generator")
 public class {1} implements FieldWriter '{'
 
     @Override
