--- a/compile/src/main/resources/InstanceSupplier.template
+++ b/compile/src/main/resources/InstanceSupplier.template
@@ -1,7 +1,9 @@
 package {0};
 
 import org.soujava.metadata.compiler.InstanceSupplier;
+import javax.annotation.processing.Generated;
 
+@Generated("Soujava InstanceSupplier Generator")
 public class {1} implements InstanceSupplier '{'
     @Override
     public Object get() '{'
