--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
     <properties>
         <maven.surefire.plugin.version>3.2.2</maven.surefire.plugin.version>
         <junit.version>5.10.1</junit.version>
+        <java.version>21</java.version>
+        <maven.compiler.plugin>3.11.0</maven.compiler.plugin>
     </properties>
 
     <dependencies>
@@ -41,10 +43,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>${maven.compiler.plugin}</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                     <encoding>UTF-8</encoding>
                     <showWarnings>true</showWarnings>
                 </configuration>
