--- a/reflection/pom.xml
+++ b/reflection/pom.xml
@@ -26,11 +26,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
+                <version>${maven.compiler.plugin}</version>
                 <configuration>
                     <compilerArgument>-proc:none</compilerArgument>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
             </plugin>
 
